@startuml model
class Settings {
    toggle_sfx()
    toggle_music()
    set_difficulty()
        sfx_enabled
    sfx_enabled
    difficulty
    __init__()
}
class Player {
    __str__()
    hand_string()
    draw_card()
    play_card()
    get_name()
    get_index()
    check_playable_card()
    __init__()
}
class AIPlayer {
    say_uno()
    set_card_on_center_edge()
        __init__()
}
class Deck {
    shuffle()
    get_card()
    return_card_to_deck()
    print_deck()
        __init__()
}

class Card {
    __str__()
    __repr__()
    conceal()
    reveal()
    get_color()
    get_value()
    get_name()
    perform_action()
    __init__()
}
class WildChanger {
    pick_color()
        images
    value
    color
    __init__()
}
class WildPickFour {
    perform_action()
        images
    __init__()
}
class Skip {
    perform_action()
        __init__()
}
class DrawTwoCard {
    perform_action()
        __init__()
}
class Reverse {
    perform_action()
        __init__()
}
class CardFactory {
    create_card()
        __init__()
}

class Game {
    -players : List
    -discard_pile : List
    -draw_pile : Deck
    -current_direction : int
    -current_color : string
    -current_value : string
    -current_player_index : int
    -clients : List

    +__init__(players, deck) : None
    +initialize_players(number_of_cards=7) : void
    +discard(discard_pile, new_card) : void
    +change_direction() : void
    +check_game_end(player) : bool
    +determine_next_player(skip=False) : int
    +play_card(player, card, online=False) : void
}

Player <|-- AIPlayer
Deck *-- Card
Game ..> Player
Game ..> Deck
Game ..> Settings
Card <|-- WildChanger
WildChanger <|-- WildPickFour
Card <|-- Skip
Card <|-- DrawTwoCard
Card <|-- Reverse
@enduml